@@ -909,6 +909,16 @@ Sets the SPI clocking rate in Hz (default is 100kHz). Alternately the -B or -i o
 Sets the timeout for USB reads and writes in milliseconds (default is 1500 ms).
 @end table
 
+@item USBasp
+Extended parameters:
+@table @code
+@item @samp{section_config}
+Programmer will erase
+configuration section with option '-e' (chip erase),
+rather than entire chip.
+Only applicable to TPI devices (ATtiny 4/5/9/10/20/40).
+@end table
+
 @end table
 
 @page
